Fixed floating cart overflow

--- a/src/components/FloatCart/style.scss
+++ b/src/components/FloatCart/style.scss
@@ -232,3 +232,22 @@
       }
   }
 }
+
+/* MAC scrollbar para desktop*/
+@media screen and (min-width: 640px){
+  .float-cart__content::-webkit-scrollbar {
+      -webkit-appearance: none;
+      width: 10px;
+      background-color: rgba(0,0,0,0.2);
+      padding: 10px;
+  }
+  .float-cart__content::-webkit-scrollbar-thumb {
+      border-radius: 4px;
+      background-color: #0c0b10;
+  }
+}
+
+.float-cart__content {
+  height: 100%;
+  overflow-y: scroll;
+}
